--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
+  "rnpm": {
+    "assets": ["./app/fonts"]
+  },
   "dependencies": {
     "react": "15.3.2",
     "react-native": "0.36.0"
